append the .gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,31 @@
+# 编译器生成的文件
+*.o
+*.obj
+*.exe
+*.dll
+*.pdb
+*.lib
+*.so
+*.dylib
+out/
+bin/
+obj/
+*.zip
+*.rar
+*.gz
+*.tar
+*.7z
+*.log
+*.tmp
+*.bak
+*.swp
+[Dd]ebug/
+[Rr]elease/
+*.suo
+*.user
+*.sln.docstates
+*.suo
+*.cache
+*.csproj.user
 .vs/
-
-LueamEngine/
+*.DS_Store
