--- a/LueamEngine/LueamEngine/LueamEngine.vcxproj.filters
+++ b/LueamEngine/LueamEngine/LueamEngine.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="Core\Graphics\VertexBuffer.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="Core\Graphics\VertexBufferFormat.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Core\Window\Window.h">
@@ -75,6 +78,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="Core\Graphics\VertexBuffer.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="Core\Graphics\VertexBufferFormat.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
