--- a/LueamEngine/LueamEngine/LueamEngine.vcxproj.filters
+++ b/LueamEngine/LueamEngine/LueamEngine.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="Core\Graphics\VertexBufferFormat.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="Core\Graphics\Shader.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Core\Window\Window.h">
@@ -81,6 +84,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="Core\Graphics\VertexBufferFormat.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="Core\Graphics\Shader.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
